Fixed the z-index issues (z-index is relative to parent, who would have known)

--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -179,10 +179,6 @@
           overflow-y: auto;
           padding: 0 2rem;
 
-          & article > p:first-of-type {
-            z-index: auto;
-          }
-
           & .preview-inner {
             margin: 0 auto;
             width: min($pageWidth, 100%);
